--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Include Bootstrap for styling -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" />
     <!-- Link to custom CSS file -->
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
     <!-- Include jQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <!-- Link to custom JavaScript file -->
-    <script src="scrip.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
